--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 </html>
 
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-<a href="../2.4+Movie+Ranking+Project/2.4 Movie Ranking Project/solution.html">Movie Ranking Project</a>
+<a href="./Movie solution.html">Movie Ranking Project</a>
 <br><br>
 <img src="./Screenshot (291).png"height=200/>
 <br>
 <!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-<a href="../3.4+Birthday+Invite+Project/3.4 Birthday Invite Project/solution.html">Birthday Invite Project</a>
+<a href="./Birthday Invite solution.html">Birthday Invite Project</a>
 <br><br>
 <img src="./Screenshot (292).png"height=300/>
 <br>
 <hr/>
-<a href="./public/about.html " >AboutMe </a> <a href=" ./public/contact.html">ContactMe</a>
+<a href="./about.html " >AboutMe </a> <a href=" ./contact.html">ContactMe</a>
 <!-- TODO 4: Add titles/subtitles etc. -->
 
 <!-- TODO 5: Add a link to the project pages -->
